Use separate logo icon and update index.html

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <header class="glass">
       <nav class="container">
         <div class="logo">
-          <img src="logo.png" alt="SmartSync logo" />
+          <img src="logo-icon.png" alt="SmartSync logo" />
           <span>SmartSync</span>
         </div>
         <ul>
