--- a/index.html
+++ b/index.html
@@ -192,6 +192,34 @@
         font-size: 0.875rem;
         opacity: 0.7;
       }
+
+      /* Styles for tabbed usecases section */
+      .tabs {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.75rem;
+        margin-top: 1.5rem;
+      }
+      .tab {
+        cursor: pointer;
+        padding: 0.5rem 1rem;
+        border-radius: 0.5rem;
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        font-weight: 500;
+        background: rgba(255, 255, 255, 0.3);
+        transition: background 0.2s, border-color 0.2s;
+      }
+      .tab.active {
+        border-color: rgba(0, 0, 0, 0.3);
+        background: rgba(255, 255, 255, 0.5);
+      }
+      .tab-content {
+        display: none;
+        margin-top: 1rem;
+      }
+      .tab-content.active {
+        display: block;
+      }
     </style>
   </head>
   <body>
@@ -253,7 +281,8 @@
       </div>
     </section>
     <!-- Usecases -->
-    <section id="usecases" class="container">
+    <!-- Original usecases moved to 'usecases-old' for backup -->
+    <section id="usecases-old" class="container">
       <div class="section-title">
         <h2>Use‑cases</h2>
         <p>Voorbeelden die we vaak realiseren.</p>
@@ -292,6 +321,64 @@
         </div>
       </div>
     </section>
+    <!-- New tab-based usecases section -->
+    <section id="usecases" class="container">
+      <div class="section-title">
+        <h2>Use‑cases per sector</h2>
+        <p>Bekijk welke processen we typisch automatiseren in verschillende domeinen.</p>
+      </div>
+      <!-- Tabs -->
+      <div class="tabs">
+        <button class="tab" data-target="tab-finance" type="button">Finance</button>
+        <button class="tab" data-target="tab-it" type="button">IT</button>
+        <button class="tab" data-target="tab-admin" type="button">Admin</button>
+      </div>
+      <!-- Tab contents -->
+      <div id="tab-finance" class="tab-content">
+        <ul>
+          <li>Automatische factuurverwerking en boeking</li>
+          <li>Betalingsmatching en herinneringen</li>
+          <li>Contractstatus en budgetrapportage</li>
+        </ul>
+      </div>
+      <div id="tab-it" class="tab-content">
+        <ul>
+          <li>Vulnerability‑feeds koppelen aan ticketing en change‑flows</li>
+          <li>Automatische compliancetaken en audit‑trail export</li>
+          <li>Proactieve monitoring en waarschuwingen</li>
+        </ul>
+      </div>
+      <div id="tab-admin" class="tab-content">
+        <ul>
+          <li>Leads synchroniseren tussen webformulieren, CRM en e‑mailcampagnes</li>
+          <li>Scoring en automatische taakcreatie voor sales</li>
+          <li>Rapporten met pipeline, conversies en no‑show alerts</li>
+        </ul>
+      </div>
+    </section>
+    <script>
+      // Tab switching logic scoped to usecases section
+      document.addEventListener('DOMContentLoaded', function() {
+        const section = document.querySelector('section#usecases');
+        if (section) {
+          const tabs = section.querySelectorAll('.tab');
+          const panels = section.querySelectorAll('.tab-content');
+          tabs.forEach((tab, index) => {
+            tab.addEventListener('click', function() {
+              tabs.forEach(t => t.classList.remove('active'));
+              panels.forEach(p => p.classList.remove('active'));
+              tab.classList.add('active');
+              panels[index].classList.add('active');
+            });
+          });
+          // Activate first tab by default
+          if (tabs.length) {
+            tabs[0].classList.add('active');
+            panels[0].classList.add('active');
+          }
+        }
+      });
+    </script>
     <!-- Workflow -->
     <section id="workflow" class="container">
       <div class="section-title">
